produced during indexing; it's also smaller. (Eric)

(opennlp.maxent.DataIndexer)
removed toIntArray() method, since TIntArrayList provides the same
behavior without the cost of a loop over a List of Integers (Eric)

(opennlp.maxent.DataIndexer)
changed indexing Maps to TObjectIntHashMaps to save space in several
places. (Eric)

1.2.6
-----
Removed Colt dependency in favor of GNU Trove. (Eric)

Refactored index() method in DataIndexer so that only one pass over the
list of events is needed.  This saves time (of course) and also space,
since it's no longer necessary to allocate temporary data structures to
share data between two loops. (Eric)

Refactored sorting/merging algorithm for ComparableEvents so that
merging can be done in place.  This makes it possible to merge without
copying duplicate events into sublists and so improves the indexer's
ability to work on large data sets with a reasonable amount of memory.
There is still more to be done in this department, however. (Eric)

The output directory is now "output" instead of "build". (Jason)

1.2.4
-----
Added options for doing *very* simple smoothing, in which we 'observe'
features that we didn't actually see in the training data.  Seems to
improve performance for models with small data sets and only a few
outcomes, though it conversely appears to degrade those with lots of
data and lots of outcomes.

Added BasicEventStream and BasicContextGenerator classes which assume
that the contextual predicates and outcomes are just sitting pretty in
lines.  This allows the events to be stored in a file and then read in
for training without scanning around producing the events everytime.

Added sample application "sports" to help with testing model behavior
and to act as an example to help newbies use the toolkit and build
their own maxent applications.

Fixed bug in TrainEval in which the number of iterations and the
cutoff were swapped in the call to train the model.
