@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.14 2002/01/02 11:31:30 jasonbaldridge Exp $ -->
+<!-- $Id: build.xml,v 1.15 2002/01/03 16:14:41 jasonbaldridge Exp $ -->
 
 <project default="package" basedir=".">
 
@@ -10,7 +10,7 @@
     <property name="Name" value="Maxent"/>
     <property name="name" value="maxent"/>
     <property name="version" value="1.2.6"/>
-    <property name="year" value="2001"/>
+    <property name="year" value="2002"/>
 
     <echo message="----------- ${Name} ${version} [${year}] ------------"/>
 
@@ -121,7 +121,6 @@
         <pathelement path="META-INF"/>
       </addfiles>
     </jlink>
-    <delete file="${build.dir}/${name}-${DSTAMP}.jar" />
   </target>
 
 
@@ -131,8 +130,8 @@
   <target name="release" depends="clean">
     <tar tarfile="${name}-${version}-src.tar"
          basedir="../"
-	 includes="${name}/**" >
-      <exclude name="${name}/docs/api/**"/>
+	 includes="${Name}/**" >
+      <exclude name="${Name}/docs/api/**"/>
       <exclude name="**/CVS"/>
     </tar>
     <gzip src="${name}-${version}-src.tar" 
