@@ -154,7 +154,7 @@ process of loading and saving models in different formats.
 
 <h2>Authors</h2>
 
-<p>The opennlp.maxent package was built by <a
+<p>The opennlp.maxent package was originally built by <a
 href="http://www.cogsci.ed.ac.uk/~jmb/">Jason Baldridge</a>, <a
 href="http://www.cis.upenn.edu/~tsmorton/">Tom Morton</a>, and <a
 href="http://www.cogsci.ed.ac.uk/~gbierner">Gann Bierner</a>.&nbsp; We
@@ -168,6 +168,10 @@ href="ftp://ftp.cis.upenn.edu/pub/ircs/tr/98-15/98-15.ps.gz">dissertation</a>
 are what really made opennlp.maxent and our Grok maxent components
 (POS tagger, end of sentence detector, tokenizer, name finder)
 possible!
+</p>
+
+<p>Eric Friedman has been steadily improving the efficiency and design
+of the package since version 1.2.0.
 </p>
 
 
