@@ -40,8 +40,8 @@ using maximum entropy models.
 
 <p>
 This web page contains some details about maximum entropy and using
-the opennlp.maxent package.  It is updated periodically, but check out
-the <a
+the opennlp.maxent package.  It is updated only periodically, so check
+out the <a
 href="https://sourceforge.net/project/?group_id=5961">Sourceforge page
 for Maxent</a> for the latest news.  You can also ask questions and
 join in discussions on the <a
@@ -68,7 +68,7 @@ the latest version of maxent.
 
     <h3>
     Email: <a href="mailto:jmb@cogsci.ed.ac.uk">jmb@cogsci.ed.ac.uk</a><br>
-    2001 October 29 <br>
+    2002 January 02 <br>
     <br>
 <A href="http://sourceforge.net"> <IMG src="http://sourceforge.net/sflogo.php?group_id=5961&amp;type=1" width="88" height="31" border="0"></A> <br>
     </h3>  
