@@ -38,6 +38,8 @@ places. (Eric)
 
 1.2.6
 -----
+Summary: efficiency improvements for model training.
+
 Removed Colt dependency in favor of GNU Trove. (Eric)
 
 Refactored index() method in DataIndexer so that only one pass over the
@@ -51,7 +53,8 @@ copying duplicate events into sublists and so improves the indexer's
 ability to work on large data sets with a reasonable amount of memory.
 There is still more to be done in this department, however. (Eric)
 
-The output directory is now "output" instead of "build". (Jason)
+The output directory of the build structure is now "output" instead of
+"build". (Jason)
 
 1.2.4
 -----
